# plugin-rs

./: Cargo.toml  README.md  build.rs
protos/: stdio.proto
src/: lib.rs
src/proto/: broker.rs  broker_grpc.rs  controller.rs  controller_grpc.rs  mod.rs  stdio.proto  stdio.rs  stdio_grpc.rs
src/server/: broker.rs  controller.rs  mod.rs  stdio.rs
