[package]
name = "plugin"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic = { git = "https://github.com/conradludgate/tonic", branch = "fix-leaked-private-struct" }
prost = "0.7"
futures = "0.3"
tokio = "1.6"
tokio-stream = "0.1"
tonic-health = { git = "https://github.com/conradludgate/tonic", branch = "fix-leaked-private-struct" }
tower = "0.4"

[build-dependencies]
tonic-build = { git = "https://github.com/conradludgate/tonic", branch = "fix-leaked-private-struct" }
